syntax = "proto3";

message ChatPacket {
	string text = 1;
	uint64 sender = 2;
}

message HandshakePacket {
	uint64 sender = 1;
	double sentTimestamp = 2;
	optional uint64 tick = 3;
	repeated uint64 peers = 4;
	optional uint64 peerLeft = 5;
	optional uint64 peerJoined = 6;
}


message AdminPacket {
	string command = 1;
	repeated string params = 2;
	uint64 sender = 3;
}
message FramePacket
{
	uint64 tick = 1;
	Identity sender = 3;
	repeated PlayerInput inputs = 4;
	repeated PhysicsObject physicsStates = 5;
	repeated NPC npcStates = 6;
	repeated PlayerState playerStates = 7;
	repeated Projectile projectileStates = 8;
	repeated Vehicle vehicleStates = 10;
	repeated GameObject objectStates = 11;
	optional WorldState worldState = 9;
}

message GameObject
{
	uint64 id = 1;
	Vec3 position = 2;
	Vec3 rotation = 3;
	bool atRest = 4;
	optional Vec3 linearVelocity = 5;
	optional Vec3 angularVelocity = 6;
}

message PlayerState 
{
	Identity identity = 5;
	Inventory inventory = 1;
	Equipment equipment = 2;
	PlayerHealth playerhealth = 3;
	optional PhysicsObject physicsObject = 4;
}

message Inventory 
{
	repeated Item items = 1;
	float totalWeight = 2;
	uint64 sizeX = 3;
	uint64 sizeY = 4;

}

message Item
{
	uint64 id = 1;
	float weight = 2;
	uint64 height = 3;
	uint64 width = 4;
	uint64 topLeftX = 5;
	uint64 topLeftY = 6;
	repeated Item contains = 7;
}

message Equipment
{
	Item helmet = 1;
	Item body = 2;
	Item rightHand = 3;
	Item leftHand = 4;
	Item back = 5;

}

message PlayerHealth
{
	float maxHP = 1;
	float currentHP = 2;
	float headHP = 3;
	float bodyHP = 4;
	float leftArmHP = 5;
	float rightArmHP = 6;
	float leftLegHP = 7;
	float rightLeftHP = 8;
	repeated Afflication afflications = 9;
}

message Afflication
{
	uint64 effectID = 1;
	BodyPart affecting = 2;
}

message WorldState 
{
	uint64 levelID = 1;
	
}

message PlayerInput
{
	Identity clientID = 4;
	repeated Action action = 1;
	Vec2 movementDirection = 2;
	Vec3 lookDirection = 3;
}
message Vec2
{
	float X = 1;
	float Y = 2;
}
message Vec3
{
	float X = 1;
	float Y = 2;
	float Z = 3;
}

message Action
{
	ActionType actionType = 1;
	ActionState actionState = 2;
}

enum BodyPart
{
	Head = 0;
	Body = 1;
	LArm = 2;
	RArm = 3;
	LLeg = 4;
	RLeg = 5;
	All = 6;
	None = 7;
	General = 8;
}
enum ActionType 
{
	Jump = 0;
	Sprint = 1;
	Crouch = 2;
	Prone = 3;
	Walk = 4;
	LeanLeft = 5;
	LeanRight = 6;

	OpenInventory = 20;
	Interact = 21;

	Fire = 30;
	Aim = 31;
	Scope = 32;
	Reload = 33;
}
enum ActionState {
	released = 0;
	pressed = 1;
}

message Identity 
{
	string name = 1;
	oneof identity 
	{
		uint64 steamID = 2;
		int64 ipAddress = 3;
	}
}

message PhysicsObject
{
	uint64 id = 6;
	Vec3 position = 1;
	optional Vec3 scale = 2;
	Vec3 rotation = 3;
	optional Vec3 linearVelocity = 4;
	optional Vec3 angularVelocity = 5;
}

message NPC 
{
	uint64 id = 1;	
	uint64 attachedTo = 2;
	optional PhysicsObject physicsObject =3;
}

message Vehicle 
{
	uint64 id = 1;
	repeated uint64 attachedChars = 2;
	optional PhysicsObject physicsObject = 3;
}

message Projectile 
{
	uint64 id = 1;
	uint64 ownerID = 2;
	uint64 projectileTypeID = 3;
	optional PhysicsObject physicsObject = 4;
}